[Core] Correctly hide empty table cells on mobile devices.

--- a/core-bundle/src/Resources/contao/themes/flexible/src/basic.css
+++ b/core-bundle/src/Resources/contao/themes/flexible/src/basic.css
@@ -26,6 +26,7 @@ ul,li {
 table {
 	border-spacing:0;
 	border-collapse:collapse;
+	empty-cells:show;
 }
 th,td {
 	padding:0;
